Fix styling on mobile

--- a/src/AdvancedSearchBox.css
+++ b/src/AdvancedSearchBox.css
@@ -11,12 +11,12 @@
     font-family: 'MonserratLight';
     color: white;
     padding:20px;
+    height: 100%;
 }
 .show{display: block;}
 
 .AdvancedSearchBox .search-box-body{
-    min-height: 100%;
-    max-height: 95vh;
+    height: 100%;
     width: auto;
     padding:0px;
     padding-top: 15px;
@@ -26,13 +26,12 @@
     text-align: center;
     align-items: center;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
 }
 
 #selection-scrollable{
     scroll-behavior: smooth;
     overflow-y:auto;
-    height: 25vh;
     border-style: solid;
     border-top: 10px;
     border-bottom: 10px;
