--- a/src/SimpleSearchBox.css
+++ b/src/SimpleSearchBox.css
@@ -9,7 +9,7 @@
     height: auto;
     width: 100%;
 }
- .search-box-body{
+.SimpleSearchBox.search-box-body{
     min-height: 100%;
     max-height: 100vh;
     width: 90%;
